starting with controller

--- a/labphew/Model/default/blink.yml
+++ b/labphew/Model/default/blink.yml
@@ -1,3 +1,7 @@
+# an example of a configuration file
+# also used for running the blink operations
+#############
+
 User:
   name: Aquiles
   role: Teacher
