created gui_tools in core and placed a shared function there

--- a/labphew/model/analog_discovery_2_config.yml
+++ b/labphew/model/analog_discovery_2_config.yml
@@ -4,6 +4,7 @@ scan:
   stop:             5   # (V)
   step:             0.1 # (V)
   integrationtime:  0.1 # (s)
+  stabilize_time:   0.001 # (s)
   ao_channel:       2
   ai_channel:       2
   name:             Example scan
