--- a/labphew/model/analog_discovery_2_config.yml
+++ b/labphew/model/analog_discovery_2_config.yml
@@ -34,9 +34,10 @@ monitor:
   time_step:        0.050   # (s) Note that the basic analog approach doesn't really go faster than 0.010 seconds
   plot_points:      110
   1:
-    name:           Channel 1
+    name:           AI Channel 1
     xlabel:         'time'
   2:
-    name:           Channel 2
+    name:           AI Channel 2
   gui_refresh_time: .01     # (s) How often gui checks if here's new data (usually quicker than time_step)
+  text_update_time: .5      # (s) Minimum time for the gui to update the value displayed as text
   stop_timeout:     1       # (s) How much time to give monitor to stop before forcefully terminating it
