--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,9 +2,7 @@ include MANIFEST.in
 include README.md
 include setup.py
 include LICENSE
-include Examples/*
-include labphew/View/design/Icons/*
-include labphew/View/design//UI/*
+include examples/*
+include labphew/view/design/icons/*
 include docs/*
 include extras/*
-exclude labphew/View/attic/*
