--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -21,4 +21,4 @@ sphinx:
 python:
   version: 3.7
   install:
-    - requirements: docs/requirements.txt
+    - requirements: docs/requirements_docs.txt
